--- a/templates/result.html
+++ b/templates/result.html
@@ -18,7 +18,7 @@
         }
     </style>
 </head>
-<h2 style="font-family:georgia; font-size: 25px; color: #114B5F"><b>Кулинарная "лингвистика"</b></h2>
+<h2 style="font-family:georgia; font-size: 25px; color: #114B5F"><b>Кулинарная лингвистика</b></h2>
 <br>
 <p style="margin-right:20px; font-family:georgia; font-size: 18px;"><b>Процент правильных ответов: {{ result[10] }}</b></p>
 
