--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 <table width="100%">
     <tr>
         <td width="50%">
-            <h2 style="font-family:georgia; font-size: 25px">Добро пожаловать в FoodDream!</h2>
+            <h2 style="font-family:georgia; font-size: 25px">Добро пожаловать в DreamFood!</h2>
             <p style="font-family:georgia; font-size: 18px"> Наша платформа разработана специально для тех,
                 кто любит экспериментировать в готовке и есть на завтрак, обед и ужин кулинарные шедевры!
                 Здесь Вас ждет много всего вкусного и веселого!
